# translate-tts

./: pyproject.toml
src/translate/: main.py  pre_process.py  translate.py
