[tool.poetry]
name = "translate-tts"
version = "0.1.0"
description = ""
authors = ["Artur Dernst, Muhammed Bayram"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[[tool.poetry.packages]]
include = "chatty_shell"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
