[tool.poetry]
name = "translate-tts"
version = "0.1.0"
description = ""
authors = ["Artur Dernst, Muhammed Bayram"]

[tool.poetry.dependencies]
python = "^3.10"
deepl = "^1.22.0"
tqdm = "^4.67.1"

[tool.poetry.dev-dependencies]

[[tool.poetry.packages]]
include = "src"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
